changed ratings to show on desktop

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="post__text post__text--last-row">Digital Communication Agency</div>
 
-        <div class="post__content">
+        <div class="post__content post__content--desktop">
           <div class="post__content post__content--rating">
             <div class="rating">
               <div class="rating__img-wrapper">
