added viewport for mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Awards</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="./dist/main.css">
@@ -25,12 +26,6 @@
         <a href="javascript:void(0);" class="header__btn header__btn--nav"><span>jobs</span></a>
         <a href="javascript:void(0);" class="header__btn header__btn--nav"><span>blogs</span></a>
         <a href="javascript:void(0);" class="header__btn header__btn--nav"><span>about us</span></a>
-
-
-
-
-
-
 
         <a href="javascript:void(0);" class="header__btn header__btn--site"><span>Submit Site</span></a>
         <a href="javascript:void(0);" class="header__btn menu-toggle"><span>Menu</span></a>
