changed description copy

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                  src="http://www.awwwards.com/media/cache/thumb_sotd_list/awards/submissions/2016/06/57711d74911aa.jpeg"
                  alt="">
           </div>
-          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson folio</strong></div>
+          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson portfolio</strong></div>
           <div class="thumbnail__text">By <span class="thumbnail__text--author">Bedford Williamson</span></div>
         </div>
         <div class="thumbnail">
@@ -137,7 +137,7 @@
                  src="http://www.awwwards.com/media/cache/thumb_sotd_list/awards/submissions/2016/06/57711d74911aa.jpeg"
                  alt="">
           </div>
-          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson folio</strong></div>
+          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson portfolio</strong></div>
           <div class="thumbnail__text">By <span class="thumbnail__text--author">Bedford Williamson</span></div>
         </div>
         <div class="thumbnail">
@@ -146,7 +146,7 @@
                  src="http://www.awwwards.com/media/cache/thumb_sotd_list/awards/submissions/2016/06/57711d74911aa.jpeg"
                  alt="">
           </div>
-          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson folio</strong></div>
+          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson portfolio</strong></div>
           <div class="thumbnail__text">By <span class="thumbnail__text--author">Bedford Williamson</span></div>
         </div>
         <div class="thumbnail">
@@ -155,7 +155,7 @@
                  src="http://www.awwwards.com/media/cache/thumb_sotd_list/awards/submissions/2016/06/57711d74911aa.jpeg"
                  alt="">
           </div>
-          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson folio</strong></div>
+          <div class="thumbnail__text thumbnail__text--bold"><strong>Bedford Williamson portfolio</strong></div>
           <div class="thumbnail__text">By <span class="thumbnail__text--author">Bedford Williamson</span></div>
         </div>
       </div>
